fixing sinput shadow problem on mobile

--- a/styles/base.scss
+++ b/styles/base.scss
@@ -59,6 +59,9 @@ button:focus, input:focus {outline:0;}
 
 input {
   border: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
 }
 
 .shadow {
