--- a/styles/search.scss
+++ b/styles/search.scss
@@ -19,6 +19,7 @@
     height: 100px;
     // border-bottom: solid 1px var(--blackish-no-transp);
     border-bottom: solid 1px rgba(155, 155, 155, 1);
+    // background-color: rgba(155, 155, 155, 1);
 
     form {
       display: grid;
@@ -37,6 +38,7 @@
       input, button {
         height: 45px;
         background-color: white;
+        // background-color: rgb(198, 198, 198);
         font-size: 18px;
         padding-bottom: 1px;
       }
@@ -63,8 +65,8 @@
         grid-column: 1 / -1;
         grid-row: 1 / -1;
         border-radius: 30px;
-        // box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
-        box-shadow: 0 0 8px rgba($color: #000000, $alpha: .6);
+        box-shadow: 0 0 6px rgba(0, 0, 0, 0.25);
+        // box-shadow: 0 0 8px rgba($color: #000000, $alpha: .6);
 
         z-index: 0;
       }
